登录注册相关

--- a/src/common/page/footer.ejs
+++ b/src/common/page/footer.ejs
@@ -39,7 +39,7 @@
 							0000-000-000</strong> 
 					</h4>
 					<h5>
-						&nbsp;&nbsp;&nbsp;&nbsp;（ 9:00 ～ 18:00 ）
+						&nbsp;&nbsp;&nbsp;&nbsp;（ 10:00 ～ 18:00 ）
 					</h5>
 				</p>
 			</div>
@@ -55,12 +55,7 @@
 			<div class="col-xs-12">
 				<div class="footer-link">
 					<p><span>友情链接：</span> 
-					<a href="http://www.wangdaizhijia.com" target="_blank" rel="nofollow">网贷之家</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.p2peye.com" target="_blank" rel="nofollow">网贷天眼</a>
-					<!--<%if(locals.linkage){%>
-						<%for(var i = 0 ; i<linkage.length; i++){%>
-							<a href="<%=linkage[i].url%>"><%=linkage[i].title%></a>
-						<%}%> 
-					<%}%>-->
+					<a href="http://www.wangdaizhijia.com" target="_blank" rel="nofollow">xxxx</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.p2peye.com" target="_blank" rel="nofollow">xxxx</a>
 				</div>
 			</div>
 		</div>
@@ -72,7 +67,7 @@
 						<li><a href="javascript:void(0)"><i class="cr_2"></i></a></li>
 						<li><a href="javascript:void(0)"><i class="cr_3"></i></a></li>
 					</ul>
-					<p>&copy; xxxxxxxxxxxx有限公司 版权所有. <a href="#"  target="_blank">粤xxxxxxxx备 xxxxxxxx号</a></p>
+					<p>&copy; xxxxxxxxxxxx有限公司 版权所有. <a href="#"  target="_blank">xxxxxxxx xxxxxxxx号</a></p>
 				</div>
 			</div>
 		</div>
