--- a/src/common/page/footer.ejs
+++ b/src/common/page/footer.ejs
@@ -108,7 +108,7 @@
             <u class="u-weixin"></u>
         </li>
         <li class="toolbar-item">
-            <a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=9282c8eca70dded38999d60812fb62e91b4d4ae02cb5442948b97175a0d5721c" class="qqq">
+            <a target="_blank" href="http://shang.qq.com/wpa/********" class="qqq">
                 <div class="item-tip-c item-tip-back">
                     <div class="item-box">
                         <div class="item-tip">一键加群</div>
