--- a/src/common/page/part_header.ejs
+++ b/src/common/page/part_header.ejs
@@ -32,7 +32,7 @@
 				&nbsp;
 				<span>|</span>
 				&nbsp;
-				<a href="/doc/about/gsjj">关于E票宝</a>
+				<a href="/doc/about/gsjj">关于xxx</a>
 			</div>
 		</div>
 	</div>
